--- a/Clase_7/index.html
+++ b/Clase_7/index.html
@@ -12,9 +12,8 @@
 
         <div class="header">
             <img src="./img/logo batman.png" alt="Loguito batman">
+            <h1 class="titulo">Curriculum vitae de Monkey.D.Luffy</h1>
         </div>
-
-        <h1>Curriculum vital de Bruce Wayne</h1>
 
     </header>
 
@@ -22,7 +21,7 @@
 
         <section>
 
-            <h2>Datos personales</h2>
+            <h2 class="subtitulo">Datos personales</h2>
 
             <article>
 
@@ -38,7 +37,7 @@
 
         <section>
 
-            <h2>Formación Académica</h2>
+            <h2 class="subtitulo">Formación Académica</h2>
 
             <article>
                 <p>1956-1961: Universidad del espantapájaros <br>
@@ -52,7 +51,7 @@
 
         <section>
 
-            <h2>Experiencia  laboral</h2>
+            <h2 class="subtitulo">Experiencia  laboral</h2>
 
             <article>
                 <p>1975-1985: Desocupado <br>
