--- a/Clase_7/index.html
+++ b/Clase_7/index.html
@@ -11,7 +11,9 @@
     <header class="Batman">
 
         <div class="header">
-            <img src="./img/logo batman.png" alt="Loguito batman">
+            <figure class="luffon">
+                <img src="./img/LUffffonn.png" alt="Loguito batman">
+            </figure>
             <h1 class="titulo">Curriculum vitae de Monkey.D.Luffy</h1>
         </div>
 
