--- a/Perro/index.html
+++ b/Perro/index.html
@@ -5,15 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cat&Dog</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
+        <figure>
+            <img src="./img/Logo.png" alt="Logo">
+        </figure> 
         <nav>
-
-            <figure>
-                <img src="./img/Logo.png" alt="Logo">
-            </figure> 
-
+            <ul style="list-style: none;">
+                <li ><a href="">Categorías</a></li>
+                <li><a href="">Pets</a></li>
+                <li><a href="">Contáctanos</a></li>
+            </ul>
         </nav>
     </header>
 
