--- a/Perro/index.html
+++ b/Perro/index.html
@@ -12,11 +12,24 @@
         <figure>
             <img src="./img/Logo.png" alt="Logo">
         </figure> 
-        <nav>
+        <nav class="cositos">
             <ul style="list-style: none;">
-                <li ><a href="">Categorías</a></li>
-                <li><a href="">Pets</a></li>
-                <li><a href="">Contáctanos</a></li>
+                <li >
+                    <img src="./img/pawprint 1.png" alt="img_categorias">
+                    <a href="">Categorías</a>
+                </li>
+                <li >
+                    <img src="./img/pawprint 1.png" alt="img_categorias">
+                    <a href="">Pets</a>
+                </li>
+                <li >
+                    <img src="./img/pawprint 1.png" alt="img_categorias">
+                    <a href="">Nosotros</a>
+                </li>
+                <li >
+                    <img src="./img/pawprint 1.png" alt="img_categorias">
+                    <a href="">Contáctanos</a>
+                </li>
             </ul>
         </nav>
     </header>
