--- a/Perro/index.html
+++ b/Perro/index.html
@@ -35,7 +35,7 @@
     </header>
 
     <main>
-
+        <img src="./img/bowl-and-pet-daities-on-green-background 1.png" alt="img_principal">
     </main>
 
     <footer>
